# robot-hardware-kinetic-level-v1.0

./: README.md
gazebo_control_plugin/: package.xml
gazebo_control_plugin/include/gazebo_control_plugin/: gazebo_control_plugin.h
gazebo_control_plugin/src/: gazebo_control_plugin.cpp
robot_examples/: package.xml
robot_examples/src/: get_joint_states.cpp  goto_target_joint_positions.cpp  multi_joint_traj_plan_pre.cpp  read_joint_states.cpp  track_trajectory.cpp
robot_hw_interface/: CMakeLists.txt  package.xml  robot_hw_interface_plugin.xml
robot_hw_interface/config/: robot_controllers.yaml  robot_hardware.yaml
robot_hw_interface/include/robot_hw_interface/: robot_hw_interface.h
robot_hw_interface/launch/: robot_hw_start.launch
robot_hw_interface/src/: robot_hw_control.cpp  robot_hw_interface.cpp
robot_hw_interface/urdf/: sawyer.urdf
robot_info/: CMakeLists.txt  package.xml
robot_info/include/robot_info/: arm_info.h  robot_info.h  robot_macro.h
robot_info/src/: arm_info.cpp
robot_sdk/: package.xml
robot_sdk/include/robot_sdk/: robot_sdk.h
robot_sdk/src/: robot_sdk.cpp
robot_sdk/test/: test_switch_controller.cpp
robot_sh_memory/: CMakeLists.txt  package.xml
robot_sh_memory/src/: sem_common.cpp  shm_common.cpp
robot_sim_world/models/my_ur10/: model.config  my_ur10.sdf
robot_sim_world/world/: my_ur10.world
traj_plan/: package.xml
traj_plan/include/traj_plan/: traj_plan.h
traj_plan/src/: traj_plan.cpp
virtual_robot/: package.xml
virtual_robot/src/: virtual_robot.cpp
